added CBC modes of operation for 3DES

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,10 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "random": "cpp",
+        "algorithm": "cpp",
+        "bitset": "cpp",
+        "optional": "cpp"
     }
 }
